BZR-138 Добавить эндпоинт GET /chats/{chatId}/messages/{messageId}/reactions/users
