# src/main/java/org/bazar/chat/app/api/reaction/dto/MessageReactionDto.java
@@ -1,0 +1,15 @@
+package org.bazar.chat.app.api.reaction.dto;
+
+import java.util.List;
+
+/**
+ * DTO для реакции и пользователей оставивших ее
+ *
+ * @param reactionId Идентификатор реакции
+ * @param users Пользователи оставившие реакцию
+ */
+public record MessageReactionDto(
+        Long reactionId,
+        List<ReactionUserDto> users
+) {
+}
